# attn-benchmarks

./: .gitignore  README.md  analyse.py  pyproject.toml  readme_run.py  run.py
src/benchmarks/: exp_config.py
src/benchmarks/frameworks/: __init__.py  flash_attn.py  flashinfer.py  flex_attention.py  naive_torch.py  pytorch_sdpa.py  te_attn.py  torch_compile.py
