[project]
name = "benchamarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "flash-attn>=2.8.3",
    "flashinfer-python>=0.4.0",
    "torch>=2.8.0",
    "transformer-engine[pytorch]>=2.8.0",
    "wheel>=0.45.1"
]

[tool.uv]
no-build-isolation-package = ["transformer-engine-torch", "flash-attn"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
